--- a/weekly.qmd
+++ b/weekly.qmd
@@ -106,7 +106,7 @@ Leader: Michael Maurer [Energy-Aware Tile Size Selection for Affine Programs on 
 26| Tuesday Dec 3     | reading
 
 
-Leader: Matin Raayai: [Should AI Optimize Your Code? A Comparative Study of Current Large Language Models Versus Classical Optimizing Compilers](https://arxiv.org/html/2406.12146v1)
+Leader: Matin Raayai: [Dr.Jit: A Just-In-Time Compiler for Differentiable Rendering](https://rgl.s3.eu-central-1.amazonaws.com/media/papers/Jakob2022DrJit.pdf)
 
 | |  |  |  | |
 |--:|---------|--------| ----| -----------|
